--- a/_includes/header_landing.html
+++ b/_includes/header_landing.html
@@ -56,7 +56,7 @@
 								</div>
 								<div class="4u">
 									<section class="middle">
-										<i class="icon featured alt fa-flash"></i>
+										<i class="icon featured alt fa-lightbulb-o"></i>
 										<header>
 											<h2>Magna etiam dolor</h2>
 										</header>
