--- a/_includes/header_landing.html
+++ b/_includes/header_landing.html
@@ -3,7 +3,7 @@
 				<div id="header">
 
 					<!-- Logo -->
-						<h1><a href="index.html">Lucy Liu</a></h1>
+						<h1><a href="index.html">Welcome!</a></h1>
 
 					<!-- Nav -->
 						<nav id="nav">
@@ -37,7 +37,7 @@
 					<!-- Banner -->
 						<section id="banner">
 							<header>
-								<h2>Howdy. This is Dopetrope.</h2>
+								<h2>Hi there! I'm Lucy</h2>
 								<p>A responsive template by HTML5 UP</p>
 							</header>
 						</section>
