--- a/_includes/header_landing.html
+++ b/_includes/header_landing.html
@@ -38,7 +38,7 @@
 						<section id="banner">
 							<header>
 								<h2>Hi there! I'm Lucy</h2>
-								<p>I like playing with data</p>
+								<p>I like art, traveling, and playing with data</p>
 							</header>
 						</section>
 
