--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -698,7 +698,7 @@
 	{
 		background: #CCE8F4 url('../images/bambooforest.jpg');
 		background-position: center center;
-		/* background-size: auto 100%; */
+		background-size: auto 100%;
 		background-repeat: no-repeat;
 		text-align: center;
 	}
