--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -10,12 +10,13 @@
 					<ul>
 						<li><a href="{{ site.baseurl }}/index.html">Home</a></li>
 						<li>
-							<a href="">Dropdown</a>
+							<a href="">Travel Log</a>
 							<ul>
-								<li><a href="{{ site.baseurl }}/blog">Blog</a></li>
-								<li><a href="#">Magna phasellus</a></li>
-								<li><a href="#">Etiam dolore nisl</a></li>
-								<li>
+								<li><a href="{{ site.baseurl }}/blog">Greece 2014</a></li>
+								<li><a href="#">Dominican Republic 2015</a></li>
+								<li><a href="#">Japan 2016</a></li>
+								<li><a href="#">Iceland 2017</a></li>
+								<!-- <li>
 									<a href="">Phasellus consequat</a>
 									<ul>
 										<li><a href="#">Magna phasellus</a></li>
@@ -25,7 +26,7 @@
 										<li><a href="#">Dolore adipiscing</a></li>
 									</ul>
 								</li>
-								<li><a href="#">Veroeros feugiat</a></li>
+								<li><a href="#">Veroeros feugiat</a></li> -->
 							</ul>
 						</li>
 						{% assign current = page.url | downcase | split: '/' %}
