--- a/_includes/header_landing.html
+++ b/_includes/header_landing.html
@@ -12,10 +12,11 @@
 								<li>
 									<a href="">Dropdown</a>
 									<ul>
-										<li><a href="{{ site.baseurl }}/blog">Blog</a></li>
-										<li><a href="#">Magna phasellus</a></li>
-										<li><a href="#">Etiam dolore nisl</a></li>
-										<li>
+										<li><a href="{{ site.baseurl }}/blog">Greece 2014</a></li>
+										<li><a href="#">Dominican Republic 2015</a></li>
+										<li><a href="#">Japan 2016</a></li>
+										<li><a href="#">Iceland 2017</a></li>
+										<!-- <li>
 											<a href="">Phasellus consequat</a>
 											<ul>
 												<li><a href="#">Magna phasellus</a></li>
@@ -24,8 +25,8 @@
 												<li><a href="#">Nisl sed aliquam</a></li>
 												<li><a href="#">Dolore adipiscing</a></li>
 											</ul>
-										</li>
-										<li><a href="#">Veroeros feugiat</a></li>
+										</li> 
+										<li><a href="#">Veroeros feugiat</a></li> -->
 									</ul>
 								</li>
 								<li><a href="{{ site.baseurl }}/left-sidebar.html">Left Sidebar</a></li>
