--- a/_includes/header_landing.html
+++ b/_includes/header_landing.html
@@ -10,12 +10,12 @@
 							<ul>
 								<li class="current"><a href="index.html">Home</a></li>
 								<li>
-									<a href="">Dropdown</a>
+									<a href="">Travel Logs</a>
 									<ul>
 										<li><a href="{{ site.baseurl }}/blog">Greece 2014</a></li>
-										<li><a href="#">Dominican Republic 2015</a></li>
-										<li><a href="#">Japan 2016</a></li>
-										<li><a href="#">Iceland 2017</a></li>
+										<li><a href="{{ site.baseurl }}/blog">Dominican Republic 2015</a></li>
+										<li><a href="{{ site.baseurl }}/blog">Japan 2016</a></li>
+										<li><a href="#">Iceland 2017 - Coming Soon!</a></li>
 										<!-- <li>
 											<a href="">Phasellus consequat</a>
 											<ul>
