--- a/_includes/header_landing.html
+++ b/_includes/header_landing.html
@@ -29,9 +29,11 @@
 										<li><a href="#">Veroeros feugiat</a></li> -->
 									</ul>
 								</li>
-								<li><a href="{{ site.baseurl }}/left-sidebar.html">Left Sidebar</a></li>
+								<li><a href="{{ site.baseurl }}/blog">Learning</a></li>
+								<li><a href="{{ site.baseurl }}/blog"></a>Data Playground</li>
+								<!-- <li><a href="{{ site.baseurl }}/left-sidebar.html">Left Sidebar</a></li>
 								<li><a href="{{ site.baseurl }}/right-sidebar.html">Right Sidebar</a></li>
-								<li><a href="{{ site.baseurl }}/no-sidebar.html">No Sidebar</a></li>
+								<li><a href="{{ site.baseurl }}/no-sidebar.html">No Sidebar</a></li> -->
 							</ul>
 						</nav>
 
