--- a/_includes/header_landing.html
+++ b/_includes/header_landing.html
@@ -9,6 +9,7 @@
 						<nav id="nav">
 							<ul>
 								<li class="current"><a href="index.html">Home</a></li>
+								<li><a href="{{ site.baseurl }}/blog"></a>Data Playground</li>
 								<li>
 									<a href="">Travel Logs</a>
 									<ul>
@@ -16,21 +17,47 @@
 										<li><a href="{{ site.baseurl }}/blog">Dominican Republic 2015</a></li>
 										<li><a href="{{ site.baseurl }}/blog">Japan 2016</a></li>
 										<li><a href="#">Iceland 2017 - Coming Soon!</a></li>
-										<!-- <li>
-											<a href="">Phasellus consequat</a>
-											<ul>
-												<li><a href="#">Magna phasellus</a></li>
-												<li><a href="#">Etiam dolore nisl</a></li>
-												<li><a href="#">Veroeros feugiat</a></li>
-												<li><a href="#">Nisl sed aliquam</a></li>
-												<li><a href="#">Dolore adipiscing</a></li>
-											</ul>
-										</li> 
-										<li><a href="#">Veroeros feugiat</a></li> -->
+										
 									</ul>
 								</li>
-								<li><a href="{{ site.baseurl }}/blog">Learning</a></li>
-								<li><a href="{{ site.baseurl }}/blog"></a>Data Playground</li>
+								<li><a href="">Learning and Life</a></li>
+									<ul>
+										<li>
+											<a href="{{ site.baseurl }}/blog">Artsy Stuff</a>
+											<ul>
+												<li><a href="#">Photography</a></li>
+												<li><a href="#">Watercolor</a></li>
+												<li><a href="#">Cooking</a></li>
+											</ul>
+										</li>
+										<li>
+											<a  href="{{ site.baseurl }}/blog">Online Learning</a>
+											<ul>
+												<li><a href="#">Coursera - Data Science</a></li>
+												<li><a href="#">Coursera - Web Scraping</a></li>
+												<li><a href="#">Video Editing</a></li>
+											</ul>
+										</li>
+										<li>
+											<a  href="{{ site.baseurl }}/blog">Good Reads</a>
+											<ul>
+												<li><a href="#">Outliers</a></li>
+												<li><a href="#">What every body is saying</a></li>
+												<li><a href="#">Art of the Elevator Pitch</a></li>
+											</ul>
+										</li>
+										<li>
+											<a  href="{{ site.baseurl }}/blog">Random Thoughts</a>
+											<ul>
+												<li><a href="#">Coffee</a></li>
+			
+											</ul>
+										</li>
+										
+										
+									</ul>
+								
+								
 								<!-- <li><a href="{{ site.baseurl }}/left-sidebar.html">Left Sidebar</a></li>
 								<li><a href="{{ site.baseurl }}/right-sidebar.html">Right Sidebar</a></li>
 								<li><a href="{{ site.baseurl }}/no-sidebar.html">No Sidebar</a></li> -->
@@ -41,7 +68,7 @@
 						<section id="banner">
 							<header>
 								<h2>Hi there! I'm Lucy</h2>
-								<p>I like traveling; I like learning new things; I like playing with data</p>
+								<p>I like playing with data; I like traveling; I like learning new things</p>
 							</header>
 						</section>
 
