--- a/_includes/header_landing.html
+++ b/_includes/header_landing.html
@@ -20,7 +20,8 @@
 										
 									</ul>
 								</li>
-								<li><a href="">Learning and Life</a></li>
+								<li>
+									<a href="">Learning and Life</a>
 									<ul>
 										<li>
 											<a href="{{ site.baseurl }}/blog">Artsy Stuff</a>
@@ -56,7 +57,7 @@
 										
 										
 									</ul>
-								
+								</li>
 								
 								<!-- <li><a href="{{ site.baseurl }}/left-sidebar.html">Left Sidebar</a></li>
 								<li><a href="{{ site.baseurl }}/right-sidebar.html">Right Sidebar</a></li>
