--- a/_includes/header_landing.html
+++ b/_includes/header_landing.html
@@ -58,7 +58,7 @@
 										
 									</ul>
 								</li>
-								
+								<li><a href="{{ site.baseurl }}/blog"></a>Resume</li>
 								<!-- <li><a href="{{ site.baseurl }}/left-sidebar.html">Left Sidebar</a></li>
 								<li><a href="{{ site.baseurl }}/right-sidebar.html">Right Sidebar</a></li>
 								<li><a href="{{ site.baseurl }}/no-sidebar.html">No Sidebar</a></li> -->
