--- a/_layouts/landing.html
+++ b/_layouts/landing.html
@@ -1,4 +1,6 @@
 {% include header.html %}
 	{{ content }}
-<!-- {% include blog.html %}
-{% include footer.html %} -->
+{% comment %}
+{% include blog.html %}
+{% include footer.html %}
+{% endcomment %}
