--- a/_includes/header_landing.html
+++ b/_includes/header_landing.html
@@ -7,7 +7,7 @@
 
 					<!-- Nav -->
 						<nav id="nav">
-							<ul>
+							<ul style="list-style-type:circle">
 								<li class="current"><a href="index.html">Home</a></li>
 								<li><a href="{{ site.baseurl }}/blog"></a>Data Playground</li>
 								<li>
