--- a/_includes/header_landing.html
+++ b/_includes/header_landing.html
@@ -12,7 +12,7 @@
 								<li><a href="{{ site.baseurl }}/blog"></a>Data Playground</li>
 								<li>
 									<a href="">Travel Logs</a>
-									<ul>
+									<ul style="list-style-type:circle">
 										<li><a href="{{ site.baseurl }}/blog">Greece 2014</a></li>
 										<li><a href="{{ site.baseurl }}/blog">Dominican Republic 2015</a></li>
 										<li><a href="{{ site.baseurl }}/blog">Japan 2016</a></li>
